# ai-photoframe-rksi

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  photoframe.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260224_01_rooms_pg17.py
backend/app/: auth.py  config.py  db.py  job_service.py  main.py  models.py  openrouter_client.py  qr_service.py  schemas.py
backend/app/routers/: admin.py  jobs.py  media.py  prompts.py  rooms.py  settings.py
backend/tests/: test_admin_auth.py  test_admin_rooms_api.py  test_db_config.py  test_docs_contract.py  test_docs_room_contract.py  test_env_loading.py  test_health.py  test_job_download_qr.py  test_job_generation.py  test_logging_config.py  test_media_uploads.py  test_openrouter_client.py  test_public_rooms_api.py  test_room_public_api.py  test_rooms_schema_migration.py  test_rooms_schema_postgres17_migration.py  test_settings_prompts_api.py
deploy/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
docs/: api-contract.md  run-local.md  run-project.md
docs/plans/: room-system-rollout-notes.md
frontend/: .env.example  dev-proxy.test.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css  types.ts
frontend/src/components/: AdminPromptManager.tsx  AdminRoomForm.tsx  PromptForm.tsx  PublicRoomMenu.test.tsx  PublicRoomMenu.tsx  StyleCard.tsx
frontend/src/lib/: api.admin.test.ts  api.test.ts  api.ts  auth.ts  navigation.ts  roomRouting.test.ts  roomRouting.ts  styleSelection.ts
(+16 files in other folders)
