[project]
name = "ai-photoframe-backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "sqlalchemy>=2.0.35",
  "pydantic>=2.9.2",
  "openai>=1.54.0",
  "python-multipart>=0.0.9",
  "qrcode>=8.2",
  "pillow>=11.3.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
